syntax = "proto3";

option go_package = "github.com/elap5e/penguin/daemon/message/pb";

// Copyright 2022 Elapse and contributors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
//
// IMMsgBodyElem is the message type for the IMMsgBodyElem.
message IMMsgBodyElem {
  message TextPb {
    int32 field3 = 3;
    int32 field4 = 4;
    int64 tiny_id = 5;
    repeated Role roles = 6;
    message Role {
      int64 id = 1;
      Info info = 2;
      bool hoist = 3;
      message Info {
        int64 id = 1;
        string title = 2;
        int32 color = 3;
        bool hoist = 4;
      }
    }
  }
}
